# portalRosa

PROYECTO/: 0_COMIENZA_AQUI.md  App.css  DESIGN_GUIDE.md  GUIA_INICIO_RAPIDO.md  HERRAMIENTAS_RESUMEN.md  HERRAMIENTAS_VISUALES.md  INDICE_DOCUMENTACION.md  QUICK_REFERENCE.md  README.md  RESUMEN_ENTREGA.md  STACK_TECNOLOGICO.md  TECHNICAL_SPECS.md  VERIFICACION_FINAL.md  VISTA_PREVIA_VISUAL.md  index.html  package-lock.json  package.json
PROYECTO/backend/: .envexample  README.md  pyproject.toml
PROYECTO/backend/prisma/: schema.prisma
PROYECTO/src/: App.css  App.jsx
PROYECTO/src/components/: CandidateProfile.jsx  CompanyListings.jsx  Footer.jsx  Header.jsx  HeroSection.jsx  HomePage.jsx  Login.jsx  TestimonialsSection.jsx  ValueProposition.jsx
PROYECTO/src/styles/: CandidateProfile.css  CompanyListings.css  Footer.css  Header.css  HeroSection.css  HomePage.css  Login.css  TestimonialsSection.css  ValueProposition.css  globals.css
