[project]
name = "portalrosa"
version = "0.1.0"
description = ""
authors = [
    {name = "Stivaly Gomez",email = "stivaly.g@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "strawberry-graphql (>=0.285.0,<0.286.0)",
    "prisma (>=0.15.0,<0.16.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
